--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <script src="lib/angular-moment/angular-moment.min.js"></script>
         <script src="lib/angular-cache/angular-cache.min.js"></script>
 
-        <!-- cordova script (this will be a 404 during development) -->
-        <!--<script src="cordova.js"></script>-->
+        
 
         <!-- your app's js -->
         <script src="js/app.js"></script>
@@ -74,7 +73,8 @@
         <script src="js/services/FieldUpdateService.js"></script>
         <script src="js/services/FormUpdateService.js"></script>
 
-
+         <!-- cordova script (this will be a 404 during development) -->
+        <script src="cordova.js"></script>
     </head>
     <body ng-app="proproject">
     <ion-nav-view diable-scroll></ion-nav-view>
