--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head >
         <!--file:///android_asset/www/index.html#/login-->
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -27,7 +27,7 @@
         <script src="lib/angular-moment/angular-moment.min.js"></script>
         <script src="lib/angular-cache/angular-cache.min.js"></script>
 
-        
+
 
         <!-- your app's js -->
         <script src="js/app.js"></script>
@@ -73,10 +73,10 @@
         <script src="js/services/FieldUpdateService.js"></script>
         <script src="js/services/FormUpdateService.js"></script>
 
-         <!-- cordova script (this will be a 404 during development) -->
+        <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
     </head>
-    <body ng-app="proproject">
+    <body ng-app="proproject" ng-controller="AppCtrl">
     <ion-nav-view diable-scroll ></ion-nav-view>
 </body>
 </html>
