--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <script src="js/controllers/CategoriesCtrl.js"></script>
         <script src="js/controllers/FormsCtrl.js"></script>
         <script src="js/controllers/FormCtrl.js"></script>
+        <script src="js/controllers/EditCtrl.js"></script>
         <script src="js/controllers/FormCompletedCtrl.js"></script>
         <script src="js/controllers/FormInstanceCtrl.js"></script>
         <script src="js/controllers/RegistersCtrl.js"></script>
@@ -52,6 +53,7 @@
         <script src="js/directives/fs.js"></script>
         <script src="js/directives/field.js"></script>
         <script src="js/directives/input.js"></script>
+        <script src="js/directives/edit.js"></script>
         <script src="js/directives/scroll.js"></script>        
         <script src="js/directives/sketch.js"></script>
         <script src="js/directives/sketchErase.js"></script>
