--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head >
-        <!--file:///android_asset/www/index.html#/login-->
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <meta http-equiv="Content-Security-Policy" content="default-src *;
               style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'
               'unsafe-eval'">
-        <title></title>
+        <title>Pro Project</title>
 
         <link rel="icon" type="image/x-icon" href="./favicon.ico"> 
         <link href="lib/ionic/css/ionic.css" rel="stylesheet">
         <link href="lib/icon-custom/style.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-
-        <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-        <link href="css/ionic.app.css" rel="stylesheet">
-        -->
 
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -44,6 +39,7 @@
         <script src="js/controllers/FormInstanceCtrl.js"></script>
         <script src="js/controllers/RegistersCtrl.js"></script>
         <script src="js/controllers/RegisterCtrl.js"></script>
+
         <!--controllers - modal-->
         <script src="js/controllers/SignatureModalCtrl.js"></script>
         <script src="js/controllers/LoadingCtrl.js"></script>
@@ -74,6 +70,7 @@
         <script src="js/services/UserService.js"></script>
         <script src="js/services/FieldUpdateService.js"></script>
         <script src="js/services/FormUpdateService.js"></script>
+        <script src="js/services/ImageService.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
