--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <script src="js/services/ImageService.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
+        <script src="lib/ng-cordova.min.js"></script> 
         <script src="cordova.js"></script>
     </head>
     <body ng-app="proproject" ng-controller="AppCtrl">
