--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <script src="js/controllers/FormInstanceCtrl.js"></script>
         <script src="js/controllers/RegistersCtrl.js"></script>
         <script src="js/controllers/RegisterCtrl.js"></script>
+        <script src="js/controllers/ForgotPasswordCtrl.js"></script>
 
         <!--controllers - modal-->
         <script src="js/controllers/SignatureModalCtrl.js"></script>
@@ -66,6 +67,7 @@
         <script src="js/services/FieldUpdateService.js"></script>
         <script src="js/services/FormUpdateService.js"></script>
         <script src="js/services/ImageService.js"></script>
+        <script src="js/services/ConvertersService.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="lib/ng-cordova.min.js"></script> 
