--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <link href="css/menu.css" rel="stylesheet">
         <link href="css/category.css" rel="stylesheet">
         <link href="css/mediaQ.css" rel="stylesheet">
+        <link href="lib/datepicker/ion-datetime-picker.min.css" rel="stylesheet">
 
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
         <script src="lib/jquery/jquery-2.1.4.js"></script>
         <script src="lib/sketch/sketch.js"></script>
-        <script src="lib/ionic-datepicker/ionic-datepicker.min.js"></script>
-        <script src="lib/ionic-timepicker/ionic-timepicker.min.js"></script>
+        <!--        <script src="lib/ionic-datepicker/ionic-datepicker.min.js"></script>
+                <script src="lib/ionic-timepicker/ionic-timepicker.min.js"></script>-->
+        <script src="lib/datepicker/ion-datetime-picker.min.js"></script>
         <script src="lib/angular-moment/angular-moment.min.js"></script>
         <script src="lib/angular-cache/angular-cache.min.js"></script>
 
@@ -67,7 +69,10 @@
         <script src="js/services/FormUpdateService.js"></script>
         <script src="js/services/FieldUpdateService.js"></script>
         <script src="js/services/ResourceService.js"></script>
-        
+        <script src="js/services/PayitemService.js"></script>
+        <script src="js/services/SchedulingService.js"></script>
+        <script src="js/services/StaffService.js"></script>
+
         <!-- cordova script (this will be a 404 during development) -->
 
         <script src="lib/ng-cordova.min.js"></script> 
