New design - Update 3

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <script src="js/controllers/RegistersCtrl.js"></script> 
         <script src="js/controllers/MyAccountCtrl.js"></script> 
         <script src="js/controllers/SharedCtrl.js"></script> 
+        <script src="js/controllers/SharedFormCtrl.js"></script>    
 
 
         <!--directives-->
@@ -72,6 +73,8 @@
         <script src="js/services/PayitemService.js"></script>
         <script src="js/services/SchedulingService.js"></script>
         <script src="js/services/StaffService.js"></script>
+        <script src="js/services/ShareService.js"></script> 
+        <script src="js/services/UserService.js"></script> 
 
         <!-- cordova script (this will be a 404 during development) -->
 
@@ -82,3 +85,4 @@
     <ion-nav-view diable-scroll ></ion-nav-view>
 </body>
 </html>
+
