New design - Update 4

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <script src="lib/ng-cordova.min.js"></script> 
         <script src="cordova.js"></script>
     </head>
-    <body ng-app="proproject" ng-controller="AppCtrl">
+    <body ng-app="proproject" ng-controller="AppCtrl" class="keyboard-open">
     <ion-nav-view diable-scroll ></ion-nav-view>
 </body>
 </html>
