--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <script src="js/services/StaffService.js"></script>
   <script src="js/services/ShareService.js"></script>
   <script src="js/services/UserService.js"></script>
+  <script src="js/services/DbService.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
 
@@ -82,6 +83,6 @@
   <script src="cordova.js"></script>
 </head>
 <body ng-app="proproject" ng-controller="AppCtrl">
-  <ion-nav-view diable-scroll ></ion-nav-view>  
+  <ion-nav-view diable-scroll ></ion-nav-view>
 </body>
 </html>
